samples/_failures_safe/1761144196_cae2c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b1bb14b.c: In function ‘main’:
./samples/SAFE/__tmp_5b1bb14b.c:177:9: error: expected declaration or statement at end of input
  177 |         }
      |         ^
./samples/SAFE/__tmp_5b1bb14b.c:177:9: error: expected declaration or statement at end of input
